--- a/crispy_forms/templates/bootstrap/layout/radioselect.html
+++ b/crispy_forms/templates/bootstrap/layout/radioselect.html
@@ -1,4 +1,4 @@
-{% load crispy_forms_filters %}
+{% load crispy_forms_filters_b3 %}
 {% load l10n %}
 
 <div class="controls"{% if flat_attrs %} {{ flat_attrs|safe }}{% endif %}>
