--- a/crispy_forms/templates/bootstrap3/layout/uneditable_input.html
+++ b/crispy_forms/templates/bootstrap3/layout/uneditable_input.html
@@ -1,4 +1,4 @@
-{% load crispy_forms_field %}
+{% load crispy_forms_field_b3 %}
 
 
 <div id="div_{{ field.auto_id }}" class="form-group{% if form_show_errors and field.errors %} error{% endif %}{% if field.css_classes %} {{ field.css_classes }}{% endif %}">
