--- a/crispy_forms/templates/bootstrap3/table_inline_formset.html
+++ b/crispy_forms/templates/bootstrap3/table_inline_formset.html
@@ -1,6 +1,6 @@
-{% load crispy_forms_tags %}
-{% load crispy_forms_utils %}
-{% load crispy_forms_field %}
+{% load crispy_forms_tags_b3 %}
+{% load crispy_forms_utils_b3 %}
+{% load crispy_forms_field_b3 %}
 
 {% specialspaceless %}
 {% if formset_tag %}
