--- a/crispy_forms/templates/uni_form/whole_uni_formset.html
+++ b/crispy_forms/templates/uni_form/whole_uni_formset.html
@@ -1,4 +1,4 @@
-{% load crispy_forms_tags %}
+{% load crispy_forms_tags_b3 %}
 
 {% if formset_tag %}
 <form {{ flat_attrs|safe }} method="{{ formset_method }}" {% if formset.is_multipart %} enctype="multipart/form-data"{% endif %}>
